test/admin/language/english/contactos/crear_lista_contactos.php
<?php
// Heading
$_['heading_title']          = 'Crear listas';
$_['text_upload']            = 'Carga exitosa!!';
// Entry
$_['entry_name']             = 'Nombre de Lista';
$_['entry_filename']         = 'Archivo';

$_['filename']               = 'Archivo';

$_['text_success']           = 'Carga exitosa';
$_['text_btn_seleccionar']  = 'Seleccionar archivo';


// Help
$_['help_filename']     = 'Presiona el boton seleccionar archivo para cargar el csv';
$_['error_filename']    = 'Filename must be between 3 and 128 characters!';

//error
$_['text_warning_open_file'] = 'No se puede abrir el archivo';
$_['text_warning_move_file'] = 'Problemas al mover archivo al servidor';
$_['error_warning_nombre_lista'] = 'Debe darle un nombre a la lista';